syntax = "proto3";
package lumera.action;

option go_package = "github.com/LumeraProtocol/lumera/x/action/types";

import "gogoproto/gogo.proto";

enum ActionType {
  option (gogoproto.goproto_enum_prefix) = false;
  option (gogoproto.goproto_enum_stringer) = true;

  ACTION_TYPE_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "ActionTypeUnspecified"];
  ACTION_TYPE_SENSE = 1 [(gogoproto.enumvalue_customname) = "ActionTypeSense"];
  ACTION_TYPE_CASCADE = 2 [(gogoproto.enumvalue_customname) = "ActionTypeCascade"];
}